@@ -1,5 +1,9 @@
 2004-03-01  Richard Sandiford  <rsandifo@redhat.com>
 
+	* frv-desc.c, frv-opc.c: Regenerate.
+
+2004-03-01  Richard Sandiford  <rsandifo@redhat.com>
+
 	* frv-desc.c, frv-opc.c, frv-opc.h: Regenerate.
 
 2004-02-26  Andrew Stubbs  <andrew.stubbs@superh.com>
